--- a/main.css
+++ b/main.css
@@ -280,6 +280,19 @@ body{
   display: block;
   animation: fadein .3s;
 }
+.prices{
+  font-size: 20px;
+  color: #5ca4d7;
+  margin-left: 10px;
+}
+#taxButton{
+  border: 2px solid #5ca4d7;
+  background-color: #fff;
+  color: #5ca4d7;
+}
+#taxButton:hover{
+  background-color: #31688f;
+}
 /*animation*/
 @keyframes fadein {
   0% {
